--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: docker/build-push-action@v5.3.0
       with:
         #build-args: # optional
-        build-contexts: src
+        #build-contexts: src
         cache-from: type=gha
         cache-to: type=gha,mode=max
         context: src
