--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,5 +26,5 @@ jobs:
         #build-contexts: src
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        context: src
+        # context: src
         push: true # optional, default is false
